release 0.13.1

	* Fixed problems with restoring piece states when hash failed.
	* Minimum peer reconnect time fix. Peers with no failures would
	  reconnect immediately.
	* Improved web seed error handling
	* DHT announce fixes and off-by-one loop fix
	* UPnP fixes
	* Fixed bug in torrent writer where the private flag was added
	  outside of the info dictionary
	* Made the torrent file parser less strict of what goes in the
	  announce-list entry
	* Fixed type overflow bug where some statistics was incorrectly
	  reported for file larger than 2 GB
	* boost-1.35 support
	* Fixed bug in statistics from web server peers where it sometimes
	  could report too many bytes downloaded.
	* Fixed bug where statistics from the last second was lost when
	  disconnecting a peer.

release 0.13
	
	* Added scrape support
	* Added add_extension() to torrent_handle. Can instantiate
	  extensions for torrents while downloading
	* Added support for remove_torrent to delete the files as well
	* Fixed issue with failing async_accept on windows
	* DHT improvements, proper error messages are now returned when
	  nodes sends bad packets
	* Optimized the country table used to resolve country of peers
	* Copying optimization for sending data. Data is no longer copied from
	  the disk I/O buffer to the send buffer.
	* Buffer optimization to use a raw buffer instead of std::vector<char>
	* Improved file storage to use sparse files
	* Updated python bindings
	* Added more clients to the identifiable clients list.
	* Torrents can now be started in paused state (to better support queuing)
	* Improved IPv6 support (support for IPv6 extension to trackers and
	  listens on both IPv6 and IPv4 interfaces).
	* Improved asserts used. Generates a stacktrace on linux
	* Piece picker optimizations and improvements
	* Improved unchoker, connection limit and rate limiter
	* Support for FAST extension
	* Fixed invalid calculation in DHT node distance